--- a/video_player/css/player.css
+++ b/video_player/css/player.css
@@ -4,10 +4,10 @@
  width:400px;
  margin-left:300px;
 }
-#video_player
-{
- width:400px;
-}
+#video_player {
+    width: 100%;
+    height: auto;
+ }
 #player_controls
 {
  background-color:black;
@@ -24,4 +24,28 @@ input[type="image"]
 {
  margin-left:150px;
  width:20px;
+}
+
+/* Style the list of videos */
+.video-list {
+   list-style: none;
+   padding-left: 0;
+}
+
+.video-list li {
+   margin-bottom: 10px;
+}
+
+.video-list li a {
+   display: block;
+   color: #333;
+   text-decoration: none;
+}
+.video-list li a:hover {
+   color: #007bff;
+}
+body{
+    margin-top: 2%;
+    background-color: violet;
+    background-size: cover;
 }
